--- a/cliff.toml
+++ b/cliff.toml
@@ -46,7 +46,7 @@ footer = """
 trim = true
 # postprocessors
 postprocessors = [
-    { pattern = '\$REPO', replace = "https://github.com/XFreeMing/algorithms-rust" }, # replace repository URL
+    { pattern = '\$REPO', replace = "https://github.com/xfree-rust/template" }, # replace repository URL
 ]
 
 [git]
